--- a/templates/__base__.html
+++ b/templates/__base__.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}{% endblock %}</title>
+    <title>HuuBlog</title>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <!--[if lt IE 9]>
       <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -59,21 +59,19 @@
                     {% else %}
                     <li><a href="#">{{user.name}} <span class="glyphicon glyphicon-user"></span>  </a></li>
                     {%endif%}
-                    <li><a href="#">登出 <span class="glyphicon glyphicon-log-out"></span>  </a></li>
+                    <li id="signout"><a href="#">登出 <span class="glyphicon glyphicon-log-out"></span>  </a></li>
                 </ul>
                 {%else%}
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span>  登录</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-pencil"></span>  注册</a></li>
+                    <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span>  登录</a></li>
+                    <li><a href="/register"><span class="glyphicon glyphicon-pencil"></span>  注册</a></li>
                 </ul>
                 {%endif%}
             </div>
         </div>
     </nav>
     {% block content %} {% endblock %}
-    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
-    {% block scripts %} {% endblock %}
+
     <footer class="footer navbar-static-bottom navbar-default">
         <div class="container">
             <div class="row">
@@ -89,6 +87,19 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script>
+    $(document).ready(function(){
+        $("#signout").on("click",function(event){
+            event.preventDefault();
+            $.get("/signout",function(data){
+                return location.assign('/');
+            })
+        })   
+    })        
+    </script>               
+    {% block scripts %} {% endblock %}
 </body>
 
 </html>
