--- a/templates/__base__.html
+++ b/templates/__base__.html
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">HuuBaa</a>
+                <a class="navbar-brand" href="/">HuuBaa</a>
             </div>
             <div class="collapse navbar-collapse" id="collapse-nav-1">
                 <ul class="nav navbar-nav">
@@ -53,7 +53,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user active"></span>  {{user.name}}</span></a>
                         <ul class="dropdown-menu manage-page">
-                            <li><a href="#"><span class="glyphicon glyphicon-align-justify"></span>  管理界面</a></li>
+                            <li><a href="/manage/users"><span class="glyphicon glyphicon-align-justify"></span>  管理界面</a></li>
                         </ul>
                     </li>
                     {% else %}
