--- a/templates/manage_users.html
+++ b/templates/manage_users.html
@@ -13,7 +13,7 @@ table th,td{
 <div class="container">
     <ol class="breadcrumb">
         <li><a href="/manage/blogs">日志</a></li>
-        <li><a href="#">评论</a></li>
+        <li><a href="/manage/comments">评论</a></li>
         <li class="active">用户</li>
     </ol>
     <div class="table-responsive">
