--- a/templates/manage_blogs_edit.html
+++ b/templates/manage_blogs_edit.html
@@ -14,7 +14,7 @@ textarea{
 <div class="container">
     <ol class="breadcrumb">
         <li><a href="/manage/blogs">日志</a></li>
-        <li><a href="#">评论</a></li>
+        <li><a href="/manage/comments">评论</a></li>
         <li><a href="/manage/users">用户</a></li>
     </ol>
     <div id="blog">
